# MDFtoISO

./: .gitattributes  privacy.md  readme.md
Icon/: mdf2iso.xcf
Mdf2IsoUWP/: Mdf2IsoUWP.sln
Mdf2IsoUWP/Mdf2IsoUWP/: App.xaml  App.xaml.cs  Converter.cs  InfoDialog.xaml  InfoDialog.xaml.cs  LogViewer.xaml  LogViewer.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Mdf2IsoConverter.cs  Mdf2IsoUWP.csproj  Package.appxmanifest
Mdf2IsoUWP/Mdf2IsoUWP/CustomControls/: LogBox.cs
Mdf2IsoUWP/Mdf2IsoUWP/Properties/: AssemblyInfo.cs
mdf2iso_src/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
mdf2iso_src/autom4te.cache/: output.1  requests  traces.0  traces.1
mdf2iso_src/src/: Makefile.am  Makefile.in  mdf2iso.c
mdf2iso_src/test/: TEST.mds  TEST2.mds
